Added test Files to test some features of the user_services